Registro de usuarios y clientes ok

--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -121,4 +121,16 @@
     font-size: 15px;
     color: #d9534f;
   }
+
+  .messageSuccess {
+    margin-top: 15px;
+    font-size: 15px;
+    color: #038832;
+  }
+
+  .messageError {
+    margin-top: 15px;
+    font-size: 15px;
+    color: #d9534f;
+  }
   
