--- a/src/app/shared/sidenav/sidenav.component.html
+++ b/src/app/shared/sidenav/sidenav.component.html
@@ -4,17 +4,17 @@
     </button>
     <ul>
       <li>
-        <a routerLink="/home">
+        <a routerLink="/dashboard/home">
           <mat-icon>dashboard</mat-icon> Inicio
         </a>
       </li>
       <li>
-        <a routerLink="/products">
+        <a routerLink="/dashboard/products">
           <mat-icon>inventory_2</mat-icon> Agregar Productos
         </a>
       </li>
       <li>
-        <a routerLink="/register">
+        <a routerLink="/dashboard/register">
           <mat-icon>person_add</mat-icon> Registrar Usuarios
         </a>
       </li>
