--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -169,10 +169,23 @@
           placeholder="Ingresa tu dirección"
         />
       </div>
+
+      <div class="form-group-reg">
+        <label for="genero">Genero</label>
+        <select id="genero" formControlName="genero">
+          <!-- Placeholder -->
+          <option value="" disabled selected>Selecciona tipo de usuario</option>
+          <option *ngFor="let genero of tiposGenero" [value]="genero">{{ genero }}</option>
+        </select>
+        <p *ngIf="registerForm.get('genero')?.touched && registerForm.get('genero')?.invalid">
+          La seleccion es obligatoria.
+        </p>
+      </div>
   
       <button type="submit" class="btn" [disabled]="registerForm.invalid">Registrar Usuario</button>
     </form>
-    <p *ngIf="message" class="message">{{ message }}</p>
+    <p *ngIf="messageSuccess" class="messageSuccess">{{ messageSuccess }}</p>
+    <p *ngIf="messageError" class="messageError">{{ messageError }}</p>
   </div>  
 </div>
 
