--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,9 +1,13 @@
 
 .header-container {
-    background-color: #3f51b5;
-    color: white;
+    // background-color: #3f51b5;
+    // color: white;
+    width: auto;
+    height: 5vh;
+    position: static;
+    border-radius: 20px;
+    align-items: center;
     justify-content: center;
-    padding: 1rem;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   }
   
@@ -15,22 +19,23 @@
 
   nav h1 {
     margin: 0;
+    color: white;
     font-size: 1.5rem;
     display: flex;
     align-items: center;
   }
   
   nav ul {
+    height: 5vh;
     list-style: none;
-    padding: 0;
-    margin: 0;
     display: flex;
-    gap: 1rem;
+    gap: 0.5rem;
     align-items: center; 
   }
   
   nav li a {
     color: white;
+    height: 5vh;
     text-decoration: none;
     display: flex;
     align-items: center;
@@ -38,6 +43,7 @@
   
   nav li a mat-icon {
     margin-right: 0.5rem;
+    margin-left: 1.5rem;
   }
 
   button{
@@ -53,11 +59,9 @@
   button:hover {
     cursor: pointer;
     border-radius: 3px;
-    background-color: rgba(14, 13, 13, 0.142);
   }
 
   p{
-    margin: 0;
     margin-left: -15px;
     margin-right: 20px;
     text-decoration: none;
