--- a/src/app/shared/layout/layout.component.css
+++ b/src/app/shared/layout/layout.component.css
@@ -1,19 +1,53 @@
 .container {
-    display: flex;
-    position: relative; 
-  }
-  
-  .main-content {
-    flex: 1;
-    position: relative;
-    transition: margin-left 0.3s;
-    height: 100%;
-  }
+  display: flex;
+  height: 100vh; /* Para que ocupe toda la pantalla */
+  overflow-y: hidden;
+}
+
+app-sidenav {
+  position: fixed;
+  margin-left: 20px;
+}
+
+.content {
+  flex-grow: 1;
+  margin-left: 250px; /* Evita que el sidenav lo cubra */
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  overflow-y: auto; /* Permite que todo haga scroll */
+}
+
+.header-container {
+  display: flex;
+  margin-left: 20px;
+}
+
+.page-title {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #333;
+  margin-right: auto; /* Empuja el header a la derecha */
+}
+
+app-header {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-right: 20px;
+  flex-grow: 1; /* Ocupa el espacio restante */
+}
+
+.main-content {
+  flex-grow: 1;
+  padding: 20px;
+}
   
   .main-content.menu-open {
     margin-left: 60px;
   }
-  
+
   .spinner-overlay {
     position: absolute;
     top: 0; 
@@ -25,5 +59,5 @@
     align-items: center;
     background-color: rgba(255, 255, 255, 0.8);
     z-index: 1;
-    color: #3f51b5;
+    color: #082F49;
   }
