--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -43,7 +43,7 @@ html, body {
 }
 
 /* Estilo para las tarjetas de producto */
-.product-card {
+/* .product-card {
   background-color: #f9f9f9;
   border: 1px solid #ddd;
   border-radius: 8px;
@@ -88,7 +88,7 @@ html, body {
 
 .product-card button:hover {
   background-color: #283593;
-}
+} */
 
 /* Media Queries para Responsividad */
 @media (max-width: 768px) {
