--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -52,7 +52,7 @@ html, body {
   }
   
   /* Estilo para las tarjetas de producto */
-  .product-card {
+  /* .product-card {
     background-color: #f9f9f9;
     border: 1px solid #ddd;
     border-radius: 8px;
@@ -63,14 +63,14 @@ html, body {
     display: inline-block;
     text-align: center;
   }
-  
-  .product-card img {
+   */
+  /* .product-card img {
     width: 100px;
     height: 100px;
     margin-bottom: 10px;
-  }
+  } */
   
-  .product-card h3 {
+  /* .product-card h3 {
     margin: 10px 0;
     font-size: 18px;
   }
@@ -93,11 +93,11 @@ html, body {
     padding: 10px 20px;
     border-radius: 4px;
     cursor: pointer;
-  }
+  } */
   
-  .product-card button:hover {
+  /* .product-card button:hover {
     background-color: #283593;
-  }
+  } */
   
   /* Media Queries para Responsividad */
   @media (max-width: 768px) {
