--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -6,7 +6,7 @@
         <button mat-icon-button [matMenuTriggerFor]="profileMenu" aria-label="Example icon-button with a menu" class="btnMenu">
           <mat-icon>account_circle</mat-icon>
         </button>
-        <p [matMenuTriggerFor]="profileMenu" class="cursor-pointer">Luis Montoya</p>
+        <p [matMenuTriggerFor]="profileMenu" class="cursor-pointer">{{user.username}}</p>
         <mat-menu #profileMenu="matMenu">
           <button mat-menu-item>
             <mat-icon>manage_accounts</mat-icon>
