--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container overflow-hidden">
   
   <div class="main-content" [class.menu-open]="isMenuOpen">
     <div class="emptyContent" *ngIf="content == true">
@@ -16,10 +16,10 @@
 
       <button mat-flat-button class="AgregarProd" (click)="openAddProductDialog()">Agregar Producto</button>
       <mat-divider></mat-divider>
-    <div class="products-content" *ngIf="content == false">
+    <div class="products-content grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4" *ngIf="content == false">
       <!-- Lista de productos -->
        @for (product of filteredProducts; track $index) {
-        <div class="product-card w-full max-w-xs bg-white rounded-lg shadow-md overflow-hidden flex flex-col items-center text-center">
+        <div class="product-card w-full max-w-xs bg-white rounded-lg shadow-md overflow-hidden flex flex-col items-center text-center mt-4">
           <div class="w-full h-44 flex justify-center items-center bg-gray-100">
             <img *ngIf="product.imagenBase64" 
               [src]="'data:image/jpeg;base64,' + product.imagenBase64"
@@ -29,24 +29,17 @@
             <h3 class="text-lg font-semibold">{{ product.nombreProducto }}</h3>
             <p class="text-gray-600">{{ product.descripcion }}</p>
             <p class="text-xl font-bold text-sky-900">$ {{ product.precio | number: '1.0-0' }}</p>
-            <div class="w-full max-w-xs bg-white grid grid-cols-2 gap-4">
-              <button (click)="editProduct(product)" class="mt-2 w-full bg-sky-900 text-white py-2 rounded-md hover:bg-blue-700">
+            <div class="w-full max-w-xs bg-white flex justify-center gap-4">
+              <button (click)="openEditProductDialog(product)" class="mt-2 w-16 bg-sky-900 text-white py-2 rounded-md hover:bg-blue-700">
                 <mat-icon>edit</mat-icon>
               </button>
-              <button (click)="deleteProduct(product)" class="mt-2 w-full bg-red-800 text-white py-2 rounded-md hover:bg-red-700">
+              <button (click)="openDeleteProductDialog(product)" class="mt-2 w-16 bg-red-800 text-white py-2 rounded-md hover:bg-red-700">
                 <mat-icon>delete</mat-icon>
               </button>
             </div>
           </div>
         </div>
        }
-      <!-- <div class="product-card" *ngFor="let product of filteredProducts">
-        <img [src]="product.image" alt="{{ product.name }}" />
-        <h3>{{ product.name }}</h3>
-        <p>{{ product.description }}</p>
-        <p class="price">$ {{ product.price | number: '1.2-2' }}</p>
-        <button (click)="buyProduct(product)">Comprar</button>
-      </div> -->
     </div>
     </div>
   </div>
