--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -16,7 +16,7 @@
             <mat-icon>settings</mat-icon>
             <span>Configuración</span>
           </button>
-          <button mat-menu-item>
+          <button mat-menu-item (click)="logout()">
             <mat-icon>logout</mat-icon>
             <span>Cerrar Sesión</span>
           </button>
