--- a/src/app/dialogs/shared/success-edit-modal/success-edit-modal.component.html
+++ b/src/app/dialogs/shared/success-edit-modal/success-edit-modal.component.html
@@ -12,11 +12,17 @@
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
                 </svg>
                 <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">{{messageModal}}</h3>
-                <button (click)="openAddProductDialog()" data-modal-hide="popup-modal" type="button" class="w-20 gap-4 py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
-                    Aceptar</button>
-                <button (click)="closeModal()" data-modal-hide="popup-modal" type="button" class="text-white gap-4 bg-red-600 w-20 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
-                    Salir
-                </button>
+                <div class="flex justify-center gap-4 mt-4">
+                    <button (click)="openAddProductDialog()" data-modal-hide="popup-modal" type="button"
+                      class="w-20 flex justify-center items-center py-2.5 px-5 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
+                      Aceptar
+                    </button>
+                  
+                    <button (click)="closeModal()" data-modal-hide="popup-modal" type="button"
+                      class="w-20 flex justify-center items-center py-2.5 px-5 text-sm font-medium text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 rounded-lg">
+                      Salir
+                    </button>
+                  </div>
             </div>
         </div>
     </div>
