Inicio de modulo de ventas

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <div class="main-content" [class.menu-open]="isMenuOpen">
+  <div class="main-content scroll-hidden overflow-auto" [class.menu-open]="isMenuOpen">
     <div class="emptyContent" *ngIf="content == true">
       <h1>Aún no tienes productos</h1>
       <p>Ingresa a la opcion Agregar Productos desde el menu izquierdo para ingresar tus productos</p>
