--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -42,6 +42,14 @@ html, body {
   font-size: 16px;
 }
 
+.scroll-hidden::-webkit-scrollbar {
+  display: none;
+}
+
+.scroll-hidden {
+  scrollbar-width: none;
+}
+
 /* Estilo para las tarjetas de producto */
 /* .product-card {
   background-color: #f9f9f9;
