--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,44 +1,55 @@
-<div class="container">
-  <div class="login-container" *ngIf="selectedForm != 'form2'">
-    <h2>Iniciar Sesión</h2>
-    <form [formGroup]="loginForm" (ngSubmit)="login()">
-      <div class="form-group">
-        <label for="username">Correo</label>
-        <input
-          type="email"
-          id="username"
-          formControlName="username"
-          placeholder="Ingresa tu correo"
-          (input)="validateEmail()"
-        />
-        <p *ngIf="loginForm.get('username')?.hasError('email') && loginForm.get('username')?.touched" class="message">
-          El correo electrónico no es válido.
-        </p>
-        <p *ngIf="loginForm.get('username')?.hasError('required') && loginForm.get('username')?.touched" class="message">
-          El correo es obligatorio.
-        </p>
+<div class="container w-full h-full flex flex-col justify-center items-center">
+  <div class="login-container w-1/2 h-2/3 flex grid grid-cols-2 bg-sky-700 shadow-xl shadow-cyan-500" *ngIf="selectedForm != 'form2'">
+    <div class="bg-sky-900 w-full h-full flex flex-col justify-center items-center rounded-lg shadow-sm shadow-black">
+      <hr class="bg-white w-3/4 ml-5">
+      <h1 class="m-5 text-white text-4xl">LikeCell</h1>
+      <hr class="bg-white w-3/4 ml-5">
+    </div>
+    <div class="flex flex-col">
+      <div class="w-2/4 h-10 mt-4 ml-[-20px] bg-sky-900 rounded-lg flex justify-center items-center">
+        <a class="text-white text-xl">Bienvenido</a>
       </div>
-      <div class="form-group">
-        <label for="password">Contraseña</label>
-        <input
-          type="password"
-          id="password"
-          formControlName="password"
-          placeholder="Ingresa tu contraseña"
-        />
-        <p *ngIf="loginForm.get('password')?.hasError('required') && loginForm.get('password')?.touched" class="message">
-          La contraseña es obligatoria.
-        </p>
+      <div class="p-5 mt-10">
+        <h2>Iniciar Sesión</h2>
+      <form [formGroup]="loginForm" (ngSubmit)="login()">
+        <div class="form-group">
+          <label for="username">Correo</label>
+          <input
+            type="email"
+            id="username"
+            formControlName="username"
+            placeholder="Ingresa tu correo"
+            (input)="validateEmail()"
+          />
+          <p *ngIf="loginForm.get('username')?.hasError('email') && loginForm.get('username')?.touched" class="message">
+            El correo electrónico no es válido.
+          </p>
+          <p *ngIf="loginForm.get('username')?.hasError('required') && loginForm.get('username')?.touched" class="message">
+            El correo es obligatorio.
+          </p>
+        </div>
+        <div class="form-group">
+          <label for="password">Contraseña</label>
+          <input
+            type="password"
+            id="password"
+            formControlName="password"
+            placeholder="Ingresa tu contraseña"
+          />
+          <p *ngIf="loginForm.get('password')?.hasError('required') && loginForm.get('password')?.touched" class="message">
+            La contraseña es obligatoria.
+          </p>
+        </div>
+        <button type="submit" class="btn bg-sky-900" [disabled]="loginForm.invalid">Iniciar Sesión</button>
+        <button type="button" class="btn bg-sky-900" (click)="goToRegister()">Registrarse</button>
+      </form>
+      <p *ngIf="message" class="message">{{ message }}</p>
       </div>
-      <button type="submit" class="btn" [disabled]="loginForm.invalid">Iniciar Sesión</button>
-      <button type="button" class="btn" (click)="goToRegister()">Registrarse</button>
-    </form>
-    <p *ngIf="message" class="message">{{ message }}</p>
+    </div>
   </div>
-  
+  <a class="text-xl text-center text-sky-900" *ngIf="selectedForm == 'form1'">POWERED BY LM</a>
 
-
-  <div class="register-container" *ngIf="selectedForm == 'form2'">
+  <div class="register-container shadow-xl shadow-cyan-500/50 w-[800px]" *ngIf="selectedForm == 'form2'">
     <label for="return" class="regresar" (click)="backToLogin()">
       <mat-icon>arrow_back</mat-icon> Regresar
     </label>
@@ -182,7 +193,7 @@
         </p>
       </div>
   
-      <button type="submit" class="btn" [disabled]="registerForm.invalid">Registrar Usuario</button>
+      <button type="submit" class="btn bg-sky-900" [disabled]="registerForm.invalid">Registrar Usuario</button>
     </form>
     <p *ngIf="messageSuccess" class="messageSuccess">{{ messageSuccess }}</p>
     <p *ngIf="messageError" class="messageError">{{ messageError }}</p>
