--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,6 +1,6 @@
-<div class="container overflow-hidden">
+<div class="container">
   
-  <div class="main-content" [class.menu-open]="isMenuOpen">
+  <div class="main-content scroll-hidden overflow-auto" [class.menu-open]="isMenuOpen">
     <div class="emptyContent" *ngIf="content == true">
       <h1>Aún no tienes productos</h1>
       <p>Agregar tus Productos</p>
@@ -28,12 +28,13 @@
           <div class="p-4 flex flex-col items-center text-center">
             <h3 class="text-lg font-semibold">{{ product.nombreProducto }}</h3>
             <p class="text-gray-600">{{ product.descripcion }}</p>
+            <p class="text-gray-600">{{product.stock}} Uds.</p>
             <p class="text-xl font-bold text-sky-900">$ {{ product.precio | number: '1.0-0' }}</p>
-            <div class="w-full max-w-xs bg-white flex justify-center gap-4">
-              <button (click)="openEditProductDialog(product)" class="mt-2 w-16 bg-sky-900 text-white py-2 rounded-md hover:bg-blue-700">
+            <div class="w-full max-w-xs bg-white flex justify-center items-center gap-4">
+              <button (click)="openEditProductDialog(product)" class="mt-2 w-11 h-11 bg-sky-900 text-white py-2 rounded-md hover:bg-blue-700">
                 <mat-icon>edit</mat-icon>
               </button>
-              <button (click)="openDeleteProductDialog(product)" class="mt-2 w-16 bg-red-800 text-white py-2 rounded-md hover:bg-red-700">
+              <button (click)="openDeleteProductDialog(product)" class="mt-2 w-11 h-11 bg-red-800 text-white py-2 rounded-md hover:bg-red-700">
                 <mat-icon>delete</mat-icon>
               </button>
             </div>
