--- a/src/app/components/sale/sale.component.html
+++ b/src/app/components/sale/sale.component.html
@@ -2,35 +2,92 @@
   <div class="main-content" [class.menu-open]="isMenuOpen">
     <!-- Mensaje cuando no hay productos -->
     <div class="emptyContent text-center" *ngIf="content == true">
-      <h1 class="text-2xl font-bold mb-2">Aún no tienes productos</h1>
-      <p class="text-gray-600">Ingresa a la opción Agregar Productos desde el menú izquierdo para ingresar tus productos</p>
+      <h1 class="text-2xl font-bold mb-2">Aún no tienes productos para facturar</h1>
     </div>
 
     <!-- Contenedor de productos -->
     <div class="products-container" *ngIf="content == false">
       <!-- Barra de búsqueda -->
-      <div class="mb-4">
+      <div class="mb-4 search-container">
         <input 
           type="text" 
           placeholder="Buscar productos..." 
           [(ngModel)]="searchTerm"
           (input)="filterProducts()"
+          (click)="showOptions = true"
           class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
         />
+
+        <!-- Lista de sugerencias -->
+        <ul *ngIf="showOptions" class=" w-full bg-white border rounded-lg shadow mt-1 max-h-40 overflow-y-auto">
+          <li
+            *ngFor="let product of filteredProducts"
+            (click)="addToCart(product)"
+            (blur)="showOptions = false"
+            class="p-2 hover:bg-blue-200 cursor-pointer"
+          >
+          <span class="text-gray-900 font-semibold">{{ product.nombreProducto }} - </span>
+          <span class="text-sky-900 font-bold">${{ product.precio | number: '1.0-0' }} - </span>
+          <span [ngClass]="product.stock > 0 ? 'text-gray-900' : 'text-red-500'">
+            {{ product.stock }} Uds.
+          </span>
+          </li>
+        </ul>
       </div>
       <mat-divider></mat-divider>
 
       <!-- Lista de productos -->
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 mt-6">
-        <div class="product-card bg-white shadow-md rounded-lg overflow-hidden flex flex-col items-center" *ngFor="let product of filteredProducts">
+      <div class="grid grid-cols-2 gap-6 mt-6">
+        <div class="flex flex-col items-center justify-center w-full">
+          <div class="w-full product-card bg-white shadow-md mt-2 rounded-lg overflow-hidden flex flex-row items-center justify-between px-2" 
+            *ngFor="let product of addedProducts(); trackBy: trackByProduct">
           <!-- Imagen del producto -->
+          <img 
+            *ngIf="product.imagenBase64" 
+            [src]="'data:image/jpeg;base64,' + product.imagenBase64" 
+            alt="{{ product.nombreProducto }}" 
+            class="w-16 h-16 object-contain bg-gray-100"
+          />
+          <!-- Contenido del producto -->
+            <h3 class="text-lg font-bold text-gray-800">{{ product.nombreProducto }}</h3>
+            <p class="price text-blue-500 font-semibold">$ {{ product.precio | number: '1.2-2' }}</p>
+            <form class="max-w-xs">
+              <div class="relative flex items-center">
+                  <button type="button" id="decrement-button" (click)="decrementQuantity(product)" data-input-counter-decrement="counter-input" class="shrink-0 bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:border-gray-600 hover:bg-gray-200 inline-flex items-center justify-center border border-gray-300 rounded-md h-5 w-5 focus:ring-gray-100 dark:focus:ring-gray-700 focus:ring-2 focus:outline-none">
+                      <svg class="w-2.5 h-2.5 text-gray-900 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 2">
+                          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h16"/>
+                      </svg>
+                  </button>
+                  <input type="text" id="counter-input" data-input-counter class="shrink-0 text-gray-900 dark:text-white border-0 bg-transparent text-sm font-normal focus:outline-none focus:ring-0 max-w-[2.5rem] text-center" placeholder="" [value]="quantities[product.id] || 1" required />
+                  <button type="button" id="increment-button" (click)="increaseQuantity(product)" data-input-counter-increment="counter-input" class="shrink-0 bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:border-gray-600 hover:bg-gray-200 inline-flex items-center justify-center border border-gray-300 rounded-md h-5 w-5 focus:ring-gray-100 dark:focus:ring-gray-700 focus:ring-2 focus:outline-none">
+                      <svg class="w-2.5 h-2.5 text-gray-900 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 18">
+                          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 1v16M1 9h16"/>
+                      </svg>
+                  </button>
+              </div>
+          </form>
+            <button 
+              (click)="removeFromCart(product.id)"
+              class="w-10 h-10 bg-red-500 text-white rounded hover:bg-blue-600 transition duration-200"
+            >
+            <mat-icon class="text-white text-lg">delete</mat-icon>
+            </button>
+        </div>
+        </div>
+        <div class="w-full flex flex-col items-center justify-center">
+          <p>No hay productos aun</p>
+        </div>
+      </div> 
+      <!--<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 mt-6">
+       <!-- <div class="product-card bg-white shadow-md rounded-lg overflow-hidden flex flex-col items-center" *ngFor="let product of filteredProducts">
+          <!-- Imagen del producto 
           <img 
             *ngIf="product.imagenBase64" 
             [src]="'data:image/jpeg;base64,' + product.imagenBase64" 
             alt="{{ product.nombreProducto }}" 
             class="w-full h-48 object-contain bg-gray-100"
           />
-          <!-- Contenido del producto -->
+          <!-- Contenido del producto 
           <div class="p-3 text-center">
             <h3 class="text-lg font-bold text-gray-800">{{ product.nombreProducto }}</h3>
             <p class="text-gray-600 text-sm">{{ product.descripcion }}</p>
@@ -43,7 +100,7 @@
             </button>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
