--- a/src/app/components/sale/sale.component.html
+++ b/src/app/components/sale/sale.component.html
@@ -1,14 +1,14 @@
-<div class="container mx-auto p-4 w-full">
-  <div class="main-content" [class.menu-open]="isMenuOpen">
+<div class="container mx-auto p-4 w-full h-full">
+  <div class="main-content h-full" [class.menu-open]="isMenuOpen">
     <!-- Mensaje cuando no hay productos -->
     <div class="emptyContent text-center" *ngIf="content == true">
       <h1 class="text-2xl font-bold mb-2">Aún no tienes productos para facturar</h1>
     </div>
 
     <!-- Contenedor de productos -->
-    <div class="products-container" *ngIf="content == false">
+    <div class="products-container  h-full" *ngIf="content == false">
       <!-- Barra de búsqueda -->
-      <div class="mb-4 search-container">
+      <div class="relative  mb-4 search-container">
         <input 
           type="text" 
           placeholder="Buscar productos..." 
@@ -19,7 +19,7 @@
         />
 
         <!-- Lista de sugerencias -->
-        <ul *ngIf="showOptions" class=" w-full bg-white border rounded-lg shadow mt-1 max-h-40 overflow-y-auto">
+        <ul *ngIf="showOptions" class="absolute w-full bg-white border rounded-lg shadow mt-1 max-h-40 overflow-y-auto z-10">
           <li
             *ngFor="let product of filteredProducts"
             (click)="addToCart(product)"
@@ -37,8 +37,8 @@
       <mat-divider></mat-divider>
 
       <!-- Lista de productos -->
-      <div class="grid grid-cols-2 gap-6 mt-6">
-        <div class="flex flex-col items-center justify-center w-full">
+      <div class="grid grid-cols-2 gap-8 h-[76vh]">
+        <div class="flex flex-col items-center justify-start w-full  overflow-y-auto">
           <div class="w-full product-card bg-white shadow-md mt-2 rounded-lg overflow-hidden flex flex-row items-center justify-between px-2" 
             *ngFor="let product of addedProducts(); trackBy: trackByProduct">
           <!-- Imagen del producto -->
@@ -74,8 +74,27 @@
             </button>
         </div>
         </div>
-        <div class="w-full flex flex-col items-center justify-center">
-          <p>No hay productos aun</p>
+        <div class="w-full flex flex-col items-center h-full">
+          <table class="w-full mt-auto">
+            <tr class="w-3/4 h-12 grid grid-cols-2 gray-200 border-2 rounded-lg">
+              <td class="bg-sky-900 flex flex-col justify-center font-bold text-lg text-white rounded-lg">
+                <span class="ml-2">Saldo sin iva</span>
+              </td>
+              <td class="flex flex-col justify-center text-sky-900 ml-2 font-semibold">$126.800</td>
+            </tr>
+            <tr class="w-3/4 h-12 grid grid-cols-2 gray-200 border-2 rounded-lg">
+              <td class="bg-sky-900 flex flex-col justify-center font-bold text-lg text-white rounded-lg">
+                <span class="ml-2">iva</span>
+              </td>
+              <td class="flex flex-col justify-center text-sky-900 ml-2 font-semibold">$19.600</td>
+            </tr>
+            <tr class="w-3/4 h-12 grid grid-cols-2 gray-200 border-2 rounded-lg">
+              <td class="bg-sky-900 flex flex-col justify-center font-bold text-lg text-white rounded-lg">
+                <span class="ml-2">Saldo total</span>
+              </td>
+              <td class="flex flex-col justify-center text-sky-900 ml-2 font-semibold">$147.500</td>
+            </tr>
+          </table>
         </div>
       </div> 
       <!--<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 mt-6">
