--- a/src/app/dialogs/shared/success-edit-modal/success-edit-modal.component.html
+++ b/src/app/dialogs/shared/success-edit-modal/success-edit-modal.component.html
@@ -13,7 +13,7 @@
                 </svg>
                 <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">{{messageModal}}</h3>
                 <div class="flex justify-center gap-4 mt-4">
-                    <button (click)="openAddProductDialog()" data-modal-hide="popup-modal" type="button"
+                    <button (click)="runProccess()" data-modal-hide="popup-modal" type="button"
                       class="w-20 flex justify-center items-center py-2.5 px-5 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
                       Aceptar
                     </button>
