--- a/src/app/components/manage-users/manage-users.component.html
+++ b/src/app/components/manage-users/manage-users.component.html
@@ -7,27 +7,71 @@
     <div class="products-container" *ngIf="content == false">
       <input 
         type="text" 
-        placeholder="Buscar productos..." 
+        placeholder="Buscar usuarios..." 
         [(ngModel)]="searchTerm"
-        (input)="filterProducts()"
+        (input)="filterUsers()"
       />
 
-      <mat-divider></mat-divider>
+      <!-- <mat-divider></mat-divider> -->
 
-   <div class="card-container grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-    <div class="card w-full max-w-xs bg-white rounded-lg shadow-md overflow-hidden flex flex-col items-center text-center mt-4">
-     <div class="card-body items-center justify-center">
-        <div class="image-container w-full h-44 flex justify-center items-center bg-gray-100">
-            <img src="assets/prueba.jpg" alt="Manage Users" class="w-full h-full object-contain">
+      <div class="flex border-b border-gray-300 items-center justify-center">
+        <button
+          class="px-4 py-2 focus:outline-none"
+          [ngClass]="{ 'border-b-2 border-blue-500 text-blue-500': activeTab === 'users' }"
+          (click)="activeTab = 'users'"
+        >
+          Usuarios
+        </button>
+        <button
+          class="px-4 py-2 focus:outline-none"
+          [ngClass]="{ 'border-b-2 border-blue-500 text-blue-500': activeTab === 'clients' }"
+          (click)="activeTab = 'clients'"
+        >
+          Clientes
+        </button>
+      </div>
+
+      <div *ngIf="activeTab === 'users'">
+        <div class="card-container grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+      @for (user of filteredUsers; track $index) {
+        <div class="card w-full max-w-xs bg-white rounded-lg shadow-md overflow-hidden flex flex-col items-center text-center mt-4">
+          <div class="w-full h-44 flex justify-center items-center bg-gray-100">
+              <img src="assets/images/sin-foto-perfil.avif" alt="Manage Users" class="w-full h-full object-contain">
+          </div>
+          <div class="p-4 flex flex-col items-center text-center">
+          <strong><p class="text-lg mt-5">{{ user.nombre + ' ' + user.apellidos }}</p></strong>
+          <p class="text-sm">{{ user.rol }}</p>
+          <p class="text-sm" [ngStyle]="{color: user.estado == 'Activo' ? 'green' : 'red'}">{{ user.estado }}</p>
         </div>
-         <p class="text-lg mt-5">Nombre Usuario</p>
-        <p class="text-sm">Rol</p>
-        <p class="text-sm">Estado</p>
+        <div class="w-full max-w-xs bg-white flex justify-center items-center gap-4 m-4">
+          <button  (click)="openEditUserDialog(user)" class="mt-2 w-1/3 h-10 bg-sky-900 text-white py-2 rounded-md hover:bg-blue-700">Editar</button>
+          <button *ngIf="user.estado == 'Inactivo'" (click)="changeStatusUser(user.id)"  class="mt-2 w-1/3 h-10 bg-green-900 text-white py-2 rounded-md hover:bg-green-700">Activar</button>
+          <button *ngIf="user.estado == 'Activo'" (click)="changeStatusUser(user.id)"  class="mt-2 w-1/3 h-10 bg-red-800 text-white py-2 rounded-md hover:bg-red-700">Desactivar</button>
+        </div>
       </div>
-      <div class="w-full max-w-xs bg-white flex justify-center items-center gap-4 m-4">
-         <button  class="mt-2 w-full h-11 bg-sky-900 text-white py-2 rounded-md hover:bg-blue-700">Editar</button>
-         <button  class="mt-2 w-full h-11 bg-red-800 text-white py-2 rounded-md hover:bg-blue-700">Desactivar</button>
-      </div>
+      }
     </div>
-   </div>
+  </div>
+
+  <div *ngIf="activeTab === 'clients'">
+        <div class="card-container grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+      @for (client of filteredClients; track $index) {
+        <div class="card w-full max-w-xs bg-white rounded-lg shadow-md overflow-hidden flex flex-col items-center text-center mt-4">
+          <div class="w-full h-44 flex justify-center items-center bg-gray-100">
+              <img src="assets/images/sin-foto-perfil.avif" alt="Manage Users" class="w-full h-full object-contain">
+          </div>
+          <div class="p-4 flex flex-col items-center text-center">
+          <strong><p class="text-lg mt-5">{{ client.nombre + ' ' + client.apellidos }}</p></strong>
+          <p class="text-sm">{{ client.rol }}</p>
+          <p class="text-sm" [ngStyle]="{color: client.estado == 'Activo' ? 'green' : 'red'}">{{ client.estado }}</p>
+        </div>
+        <div class="w-full max-w-xs bg-white flex justify-center items-center gap-4 m-4">
+          <button (click)="openEditUserDialog(client)" class="mt-2 w-1/3 h-10 bg-sky-900 text-white py-2 rounded-md hover:bg-blue-700">Editar</button>
+          <button *ngIf="client.estado == 'Inactivo'" (click)="changeStatusUser(client.id)"  class="mt-2 w-1/3 h-10 bg-green-900 text-white py-2 rounded-md hover:bg-green-700">Activar</button>
+          <button *ngIf="client.estado == 'Activo'" (click)="changeStatusUser(client.id)"   class="mt-2 w-1/3 h-10 bg-red-800 text-white py-2 rounded-md hover:bg-red-700">Desactivar</button>
+        </div>
+      </div>
+      }
+    </div>
+      </div>
 </div>
